frontend/k8s/01-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: durhamtownhouse-com
  labels:
    app: durhamtownhouse-com
    app.kubernetes.io/name: durhamtownhouse-com
    app.kubernetes.io/part-of: durhamtownhouse-com
