frontend/k8s/10-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: durhamtownhouse-com-svc
  namespace: durhamtownhouse-com
  labels:
    app: durhamtownhouse-com
    app.kubernetes.io/name: durhamtownhouse-com
    app.kubernetes.io/part-of: durhamtownhouse-com
spec:
  ports:
    - port: 8080
      name: web
  selector:
    app: durhamtownhouse-com
